smaller dockerfile image and more generic models.generic

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,8 +1,14 @@
-FROM golang:1.19-alpine
+FROM golang:1.19-alpine as build_stage
 
-ENV APP_NAME microservice3
- 
-COPY . $GOPATH/src/$APP_NAME
+ENV APP_NAME api
 WORKDIR $GOPATH/src/$APP_NAME
+
+COPY go.mod go.sum ./
+RUN go mod download
+
+COPY . .
  
 RUN go build -v -o /target-executable
+
+FROM golang:1.19-alpine as deploy_stage
+COPY --from=build_stage /target-executable /
