--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,14 +1,16 @@
 FROM golang:1.19-alpine as build_stage
 
-ENV APP_NAME api
-WORKDIR $GOPATH/src/$APP_NAME
+WORKDIR $GOPATH/src/
 
 COPY go.mod go.sum ./
 RUN go mod download
 
 COPY . .
+
+RUN go install github.com/swaggo/swag/cmd/swag@latest
+RUN swag init
  
 RUN go build -v -o /target-executable
 
 FROM golang:1.19-alpine as deploy_stage
-COPY --from=build_stage /target-executable /
+COPY --from=build_stage /target-executable $GOPATH/src/docs /
