--- a/src/api/networking/monitoring/prometheus/prometheus.yml
+++ b/src/api/networking/monitoring/prometheus/prometheus.yml
@@ -8,7 +8,11 @@ alerting:
 rule_files:
 
 scrape_configs:
-- job_name: server_v1
+- job_name: default_metrics
   metrics_path: "/api/v1/metrics"
+  static_configs:
+  - targets: ["server:4788"]
+- job_name: custom_metrics
+  metrics_path: "/api/v1/metrics/custom"
   static_configs:
   - targets: ["server:4788"]
