--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.9"
 
 services:
-  server:
+  api_service:
     build:
       context: .
       dockerfile: ./Dockerfile
@@ -22,7 +22,7 @@ services:
       - ./api/networking/monitoring/prometheus/tmp:/prometheus
       - ./api/networking/monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
     depends_on:
-      - server
+      - api_service
   grafana:
     image: grafana/grafana:9.3.0
     ports:
