--- a/src/k8s.yml
+++ b/src/k8s.yml
@@ -3,7 +3,7 @@ kind: Pod
 metadata:
   name: api_pod
   labels:
-    app: api_server
+    app.kubernetes.io/name: api_server
 spec:
   containers:
   - name: api_container
@@ -19,12 +19,12 @@ kind: Deployment
 metadata:
   name: api_deployment
   labels:
-    app: api_server
+    app.kubernetes.io/name: api_server
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: api_server
+      app.kubernetes.io/name: api_server
   strategy: 
     type: RollingUpdate
     rollingUpdate:
@@ -35,10 +35,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: api_service
+  labels:
+    app.kubernetes.io/name: api_server
 spec:
   type: ClusterIP
   selector:
-    app: api_server
+    matchLabels:
+      app.kubernetes.io/name: api_server
   ports:
     - name: http-api
       appProtocol: http
@@ -48,6 +51,22 @@ spec:
       appProtocol: http
       protocol: TCP
       port: http-metrics
+---
+apiVersion: monitoring.coreos.com/v1
+kind: ServiceMonitor
+metadata:
+  name: api_monitor
+spec:
+  endpoints:
+  - path: /metrics
+    port: http-metrics
+    interval: 15s   
+  - path: /metrics/custom
+    port: http-metrics
+    interval: 15s
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: api_server
 ---
 # # EXAMPLE SECRET for k8s-secrets.yml:
 # apiVersion: v1
@@ -100,7 +119,7 @@ metadata:
 spec:
   type: ClusterIP
   selector:
-    app: db_server
+    app.kubernetes.io/name: db_server
   ports:
     - name: db_port
       protocol: TCP
@@ -111,13 +130,13 @@ kind: StatefulSet
 metadata:
   name: db_statefulset
   labels:
-    app: db_server
+    app.kubernetes.io/name: db_server
 spec:
   serviceName: db_service
   replicas: 1
   selector:
     matchLabels:
-      app: db_server
+      app.kubernetes.io/name: db_server
   strategy: 
     type: RollingUpdate
     rollingUpdate:
